syntax = "proto3";
package gc.garcol.exchange.proto;
option java_outer_classname = "BalanceCommandProto";

import "common.proto";

message CreateBalance {
  UUID correlationId = 1;
  int64 ownerId = 2;
}

message Deposit {
  UUID correlationId = 1;
  int64 ownerId = 2;
  string asset = 3;
  BigDecimal amount = 4;
  optional LockVersion version = 5;
}

message Withdrawn {
  UUID correlationId = 1;
  int64 ownerId = 2;
  string asset = 3;
  BigDecimal amount = 4;
  optional LockVersion version = 5;
}
